--- a/.github/workflows/doctest.yml
+++ b/.github/workflows/doctest.yml
@@ -6,9 +6,9 @@ name: DocTest
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -62,7 +62,8 @@ jobs:
           git submodule update --init --recursive
           docker exec ${TEST_CONTAINER_NAME} python3 -m pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
           docker exec ${{ env.TEST_CONTAINER_NAME }} python3 -m pip install -f https://staging.oneflow.info/branch/master/cu102 oneflow
-          docker exec ${{ env.TEST_CONTAINER_NAME }} python3 setup.py install --user
+          docker exec ${{ env.TEST_CONTAINER_NAME }} python3 -m pip install -r dev-requirements.txt --user
+          docker exec ${{ env.TEST_CONTAINER_NAME }} python3 setup.py install
       - name: DocTest
         timeout-minutes: 45
         run: |
