--- a/.github/workflows/doctest.yml
+++ b/.github/workflows/doctest.yml
@@ -41,7 +41,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       # Runs a set of commands using the runners shell
-      - name: Pip Install Requirements
+      - name: Start container
         timeout-minutes: 45
         run: |
           docker pull ${{ env.TEST_IMG_TAG }}
@@ -63,7 +63,7 @@ jobs:
           docker exec ${TEST_CONTAINER_NAME} python3 -m pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
           docker exec ${{ env.TEST_CONTAINER_NAME }} python3 -m pip install -f https://staging.oneflow.info/branch/master/cu102 oneflow
           docker exec ${{ env.TEST_CONTAINER_NAME }} python3 -m pip install -r dev-requirements.txt --user
-          docker exec ${{ env.TEST_CONTAINER_NAME }} python3 setup.py install
+          docker exec ${{ env.TEST_CONTAINER_NAME }} bash ci/install.sh
       - name: DocTest
         timeout-minutes: 45
         run: |
