--- a/.github/workflows/doctest.yml
+++ b/.github/workflows/doctest.yml
@@ -69,7 +69,7 @@ jobs:
       - name: DocBuildTest
         timeout-minutes: 45
         run: |
-          docker exec -w $PWD/docs ${{ env.TEST_CONTAINER_NAME }} make html_cn
+          docker exec -w $PWD/docs ${{ env.TEST_CONTAINER_NAME }} make html_cn SPHINXOPTS="-W --keep-going"
       - name: Remove container
         timeout-minutes: 45
         if: ${{ always() }}
