--- a/.github/workflows/doctest.yml
+++ b/.github/workflows/doctest.yml
@@ -55,7 +55,7 @@ jobs:
             --name ${TEST_CONTAINER_NAME} \
             ${{ env.TEST_IMG_TAG }} \
             sleep 3600
-      - name: Install docreset
+      - name: Install doc test requirements
         timeout-minutes: 45
         run: |
           docker exec ${TEST_CONTAINER_NAME} python3 -m pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
