--- a/.github/workflows/doctest.yml
+++ b/.github/workflows/doctest.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           set -x
           docker run --rm -v $PWD:/p -w /p busybox rm -rf *
+          docker run --rm -v $PWD:/p -w /p busybox rm -rf .*
       - name: Remove container
         timeout-minutes: 45
         run: |
