--- a/docs/Makefile
+++ b/docs/Makefile
@@ -17,7 +17,7 @@ test_cn: Makefile
 	@cd source && DOCTEST=1 python3 -c "import cn"
 
 html_cn: Makefile
-	@CN_DOCS=1 DOCBUILD=1 $(SPHINXBUILD) -M html "$(SOURCEDIR)" "$(BUILDDIR)-cn" $(SPHINXOPTS) $(O)
+	@rm -rf "$(BUILDDIR)-cn" && CN_DOCS=1 DOCBUILD=1  $(SPHINXBUILD) -M html "$(SOURCEDIR)" "$(BUILDDIR)-cn" $(SPHINXOPTS) $(O)
 
 html: Makefile
 	@$(SPHINXBUILD) -M html "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
