--- a/.github/workflows/doctest.yml
+++ b/.github/workflows/doctest.yml
@@ -70,6 +70,7 @@ jobs:
       - name: DocBuildTest
         timeout-minutes: 45
         run: |
+          docker exec -w $PWD/docs ${{ env.TEST_CONTAINER_NAME }} python3 -m pip install -r requirements.txt --user
           docker exec -w $PWD/docs ${{ env.TEST_CONTAINER_NAME }} make html_cn SPHINXOPTS="-W --keep-going"
       - name: Remove container
         timeout-minutes: 45
