--- a/.github/workflows/doctest.yml
+++ b/.github/workflows/doctest.yml
@@ -66,12 +66,12 @@ jobs:
       - name: DocTest
         timeout-minutes: 45
         run: |
-          docker exec -w $PWD/docs ${{ env.TEST_CONTAINER_NAME }} make test_cn
+          docker exec -w $PWD/docs ${{ env.TEST_CONTAINER_NAME }} make test
       - name: DocBuildTest
         timeout-minutes: 45
         run: |
           docker exec -w $PWD/docs ${{ env.TEST_CONTAINER_NAME }} python3 -m pip install -r requirements.txt --user
-          docker exec -w $PWD/docs ${{ env.TEST_CONTAINER_NAME }} make html_cn SPHINXOPTS="-W --keep-going"
+          docker exec -w $PWD/docs ${{ env.TEST_CONTAINER_NAME }} make html SPHINXOPTS="-W --keep-going"
       - name: Remove container
         timeout-minutes: 45
         if: ${{ always() }}
