--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,7 +1,7 @@
 pybind11==2.9.2
 cmake==3.22.4
 sphinx==3.5.4
-myst-parser==0.17.2
+recommonmark==0.6.0
 jinja2<3.1
 furo==2021.4.11b34
 sphinx-copybutton==0.5.0
