--- a/.github/workflows/doctest.yml
+++ b/.github/workflows/doctest.yml
@@ -61,7 +61,7 @@ jobs:
         run: |
           docker exec ${TEST_CONTAINER_NAME} python3 -m pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
           docker exec ${{ env.TEST_CONTAINER_NAME }} python3 -m pip install -f https://staging.oneflow.info/branch/master/cu102 --pre oneflow
-          docker exec ${{ env.TEST_CONTAINER_NAME }} python3 -m pip install -r dev-requirements.txt --user
+          docker exec ${{ env.TEST_CONTAINER_NAME }} python3 -m pip install -r docs/requirements.txt --user
           docker exec ${{ env.TEST_CONTAINER_NAME }} bash ci/install.sh
       - name: DocTest
         timeout-minutes: 45
