add .readthedocs.yaml file (#79)
* remove submodule init

* add .readthedocs.yaml

* refine

* Update .readthedocs.yaml

* combine requirements.txt

* html_cn -> html, test_cn -> test

* recommark -> myst_parser

* downgrad to python 3.8

* refine

* refine

* refine

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -13,14 +13,11 @@ help:
 
 .PHONY: help Makefile
 
-test_cn: Makefile
+test: Makefile
 	@cd source && DOCTEST=1 python3 -c "import cn"
 
-html_cn: Makefile
-	@rm -rf "$(BUILDDIR)-cn" && CN_DOCS=1 DOCBUILD=1  $(SPHINXBUILD) -M html "$(SOURCEDIR)" "$(BUILDDIR)-cn" $(SPHINXOPTS) $(O)
-
 html: Makefile
-	@$(SPHINXBUILD) -M html "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+	@rm -rf "$(BUILDDIR)-cn" && $(SPHINXBUILD) -M html "$(SOURCEDIR)" "$(BUILDDIR)-cn" $(SPHINXOPTS) $(O)
 
 clean: Makefile
 	@rm -rf build build-cn
