--- a/.github/workflows/doctest.yml
+++ b/.github/workflows/doctest.yml
@@ -61,17 +61,17 @@ jobs:
         run: |
           docker exec ${TEST_CONTAINER_NAME} python3 -m pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
           docker exec ${{ env.TEST_CONTAINER_NAME }} python3 -m pip install -f https://staging.oneflow.info/branch/master/cu102 --pre oneflow
-          docker exec ${{ env.TEST_CONTAINER_NAME }} python3 -m pip install -r dev-requirements.txt --user
+          docker exec ${{ env.TEST_CONTAINER_NAME }} python3 -m pip install -r docs/requirements.txt --user
           docker exec ${{ env.TEST_CONTAINER_NAME }} bash ci/install.sh
       - name: DocTest
         timeout-minutes: 45
         run: |
-          docker exec -w $PWD/docs ${{ env.TEST_CONTAINER_NAME }} make test_cn
+          docker exec -w $PWD/docs ${{ env.TEST_CONTAINER_NAME }} make test
       - name: DocBuildTest
         timeout-minutes: 45
         run: |
           docker exec -w $PWD/docs ${{ env.TEST_CONTAINER_NAME }} python3 -m pip install -r requirements.txt --user
-          docker exec -w $PWD/docs ${{ env.TEST_CONTAINER_NAME }} make html_cn SPHINXOPTS="-W --keep-going"
+          docker exec -w $PWD/docs ${{ env.TEST_CONTAINER_NAME }} make html SPHINXOPTS="-W --keep-going"
       - name: Remove container
         timeout-minutes: 45
         if: ${{ always() }}
